--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-theme: nishimu
-title: {{ Yuto }}'s personal blog
-description: This is where I explain about my life
-author: {{ Yuto }}
-
+theme: minima
+title: {{ login }}'s personal blog
+description: This is where I share cool stuff about my life
+author: {{ login }}
